# mlipx-hub

./: .gitignore  README.md  data.dvc  download.py  main.py  models.dvc  pyproject.toml
.dvc/: config
adsorption/cu_fcc111/: README.md  dvc.yaml  main.py  models.py  params.yaml  setup.sh  zntrack.json
co-splitting/mp-30/: README.md  dvc.yaml  main.py  params.yaml  zntrack.json
diatomics/: main.py  models.py  params.yaml
diatomics/LiCl/: README.md  dvc.yaml  models.py  params.yaml  zntrack.json
diatomics/LiCl/nodes/orb_v2/HomonuclearDiatomics/: .gitignore
diatomics/LiCl/nodes/orca/HomonuclearDiatomics/: node-meta.json
diatomics/nodes/initialize/Smiles2Conformers/: node-meta.json
energy-volume/: models.py
energy-volume/mp-1143/: README.md  dvc.yaml  main.py  params.yaml  zntrack.json
invariances/mp-1143/: README.md  dvc.yaml  main.py  params.yaml  zntrack.json
md/ethanol_64/: dvc.yaml  main.py  models.py  params.yaml  zntrack.json
md/mp-1143/: README.md  dvc.yaml  main.py  models.py  params.yaml  zntrack.json
md/water/: README.md  dvc.yaml  main.py  models.py  params.yaml  zntrack.json
md/water_ethanol_32_32/: dvc.yaml  main.py  models.py  params.yaml  zntrack.json
metrics/DODH_adsorption/: README.md  dvc.yaml  main.py  models.py  params.yaml  zntrack.json
neb/ex01/: README.md  dvc.yaml  main.py  models.py  params.yaml  zntrack.json
phase_diagram/mp-30084/: README.md  dvc.yaml  main.py  models.py  params.yaml  zntrack.json
pourbaix_diagram/mp-1143/: README.md  dvc.yaml  main.py  models.py  params.yaml  zntrack.json
relax/mp-1143/: README.md  dvc.yaml  main.py  models.py  params.yaml  zntrack.json
vibrational_analysis/CxO/: README.md  dvc.yaml  main.py  params.yaml  zntrack.json
(+1 files in other folders)
