[project]
name = "mlipx-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc-s3>=3.2.0",
    "mlipx[mattersim,orb,sevenn,grace,chgnet]",
    "znmdakit",
]

[tool.uv.sources]
mlipx = { path = "/data/fzills/tools/mlipx", editable = true }
znmdakit = { path = "/data/fzills/tools/znmdakit", editable = true }
