[project]
name = "mlipx-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc-s3>=3.2.0",
    "ipykernel>=6.29.5",
    "mlipx[mattersim,orb,sevenn,grace,chgnet]",
    # "mlipx[mace]",
    "znmdakit",
    "zntrack",
    "huggingface-hub[cli]>=0.32.2",
]

[tool.uv.sources]
mlipx = { path = "/data/fzills/tools/mlipx", editable = true }
znmdakit = { path = "/data/fzills/tools/znmdakit", editable = true }
zntrack = { git = "https://github.com/zincware/zntrack", rev = "rich-list" }
